--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="../src/index.css">
+     <!-- Compiled and minified CSS -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
      <!-- Compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -36,29 +37,16 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="navbar-fixed">
       <nav>
-        <div class="nav-wrapper black">
-          <a href="#!" class="brand-logo logo center">GAMARO</a>
+        <div class="nav-wrapper">
+          <a href="#!" class="brand-logo">GAMARO</a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
+            <li><a href="stripe.com">Cart</a></li>
+            <li><a href="badges.html">[profile pic]</a></li>
           </ul>
         </div>
       </nav>
     </div>
-    <div class="search row">
-
-      <div class="col s3 grey lighten-2">
-        <h2 class="center">Search</h2>
-        <!-- Grey navigation panel -->
-      </div>
-
-      <div class="col s9 whitesmoke logo">
-<h1 class="center">GAMARO</h1>
-        <div id="root"></div>
-
-      </div>
-
-    </div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -69,7 +57,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
