--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,10 +15,11 @@
      <!-- Compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+     rel="stylesheet">
+     <link rel="stylesheet" href="../src/index.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,44 +34,53 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>GAMARO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="navbar-fixed">
       <nav>
-        <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">GAMARO</a>
+        <div class="nav-wrapper black">
+          <a href="#!" class="brand-logo center logo">GAMARO</a>
           <ul class="right hide-on-med-and-down">
             <li><a href="stripe.com">Cart</a></li>
-            <li><a href="badges.html">[profile pic]</a></li>
+            <!-- <li><button class="btn green btn-flat"><a href="badges.html">[profile]</a></button></li> -->
           </ul>
         </div>
       </nav>
     </div>
-    <!-- Grey navigation panel -->
-    <div class="search row">
+    <div class="row">
 
-      <div class="col s3 grey lighten-2">
-        <h2 class="center">Search</h2>
-      </div>
+      <!-- Grey search panel -->
+      <aside id="search" class="col s3 grey lighten-2">
+        <h3 class="center">Search</h3>
+        <h5>
+          <form>
+            <h6>Console</h6>
+            <h6>Genre</h6>
+            <h6>Release</h6>
+            <h6>Rating</h6>
+          </form>
+        </h5>
+      </aside>
 
       <!-- Main content area -->
 <div class="col s9 whitesmoke">
   <main class="container center">
   <h1 class="center">
 <!-- FAB -->
-    <button class="btn fixed-action-btn btn-floating yellow modal-trigger" data-target="modal1"><span class="play material-icons">play_arrow</span></button></h1>
+    <button id="FAB" class="btn btn-floating yellow modal-trigger" data-target="modal1"><span id="play">▶</span></button></h1>
 <!-- Modal Structure -->
     <div id="modal1" class="modal">
       <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
+        <h4 class="logo">START</h4>
+        <p>Buy, Sell, Review, My Profile</p>
       </div>
       <div class="modal">
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
       </div>
-    </div>
+    </div class="container col">
+    <p>GAMARO - Buy Sell Trade Retro Games</p>
         <div id="root"></div>
 
       </div>
