--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,41 +37,13 @@
     <title>GAMARO</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="navbar-fixed">
-      <nav>
-        <div class="nav-wrapper black">
-          <a href="#!" class="brand-logo center logo">GAMARO</a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="stripe.com">Cart</a></li>
-            <!-- <li><button class="btn green btn-flat"><a href="badges.html">[profile]</a></button></li> -->
-          </ul>
-        </div>
-      </nav>
-    </div>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="row">
-
-      <!-- Grey search panel -->
-      <aside id="search" class="col s3 grey lighten-2">
-        <h3 class="center">Search</h3>
-        <h5>
-          <form>
-            <h6>Console</h6>
-            <h6>Genre</h6>
-            <h6>Release</h6>
-            <h6>Rating</h6>
-          </form>
-        </h5>
-      </aside>
-
-      <!-- Main content area -->
 <div class="col s9 whitesmoke">
   <main class="container center">
-  <h1 class="center">
-<!-- FAB -->
-    <button id="FAB" class="btn btn-floating yellow modal-trigger" data-target="modal1"><span id="play">▶</span></button></h1>
+  <h1 class="center"> -->
 <!-- Modal Structure -->
-    <div id="modal1" class="modal">
+    <!-- <div id="modal1" class="modal">
       <div class="modal-content">
         <h4 class="logo">START</h4>
         <p>Buy, Sell, Review, My Profile</p>
@@ -80,12 +52,12 @@
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
       </div>
     </div class="container col">
-    <p>GAMARO - Buy Sell Trade Retro Games</p>
+    <p>GAMARO - Buy Sell Trade Retro Games</p> -->
         <div id="root"></div>
 
-      </div>
+      <!-- </div>
 </main>
-    </div>
+    </div> -->
 
     <!--
       This HTML file is a template.
