Modal working but ugly

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,27 +37,10 @@
     <title>GAMARO</title>
   </head>
   <body>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="row">
-<div class="col s9 whitesmoke">
-  <main class="container center">
-  <h1 class="center"> -->
-<!-- Modal Structure -->
-    <!-- <div id="modal1" class="modal">
-      <div class="modal-content">
-        <h4 class="logo">START</h4>
-        <p>Buy, Sell, Review, My Profile</p>
-      </div>
-      <div class="modal">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-      </div>
-    </div class="container col">
-    <p>GAMARO - Buy Sell Trade Retro Games</p> -->
-        <div id="root"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
 
-      <!-- </div>
-</main>
-    </div> -->
+    <div id="root"></div>
+
 
     <!--
       This HTML file is a template.
@@ -70,8 +53,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="../src/index.js"></script>
 
   </body>
